--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,47 @@
+
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 /* You can add global styles to this file, and also import other style files */
+.iconHeader{
+	right: 8px;
+    top: 8px;
+    position: absolute;	
+}
+
+/*segfy main #E65431*/
+/*segfy alt #5AB84D*/
+/*segfy gray #909090*/
+/*segfy blue #909090*/
+
+body {
+    /*background-color: #96D6F2;*/
+    background-color: #cdebfa;
+    background-size: cover;
+    font-family: 'Roboto', sans-serif;
+}
+
+.headerText{
+	font-size: 16px;
+}
+
+.contentText{
+	font-size: 12px;
+}
+
+.mainHeader{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 80px;
+	background-color: rgba(255,255,255, 0.7);
+	z-index: 9;
+}
+.mainContent{
+	margin-top: 90px;
+}
+
+h2{
+	padding-left: 30px;
+}
